--- a/database.env
+++ b/database.env
@@ -1,5 +1,5 @@
-DB_NAME=recipes_db
-DB_USER=recipe_user
-DB_PASS=recipe_psw
+DB_NAME=test_db
+DB_USER=test_user
+DB_PASS=test_psw
 DB_HOST=localhost
 DB_PORT=5432
